tests/reference/tokens-indent2-a8438a0.stderr
tokenizer error: Indentation should be of the same type (either tabs or spaces)
 --> tests/tokens/errors/indent2.py:4:1
  |
4 |  else:
  | ^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
